resolved mentioned issues
